@@ -11,7 +11,7 @@ FIREFOX_VERSION=38.6.0esr
 
 TORBROWSER_UPDATE_CHANNEL=release
 
-TORBROWSER_TAG=tor-browser-${FIREFOX_VERSION}-5.5-1-build1
+TORBROWSER_TAG=tor-browser-${FIREFOX_VERSION}-5.5-1-build2
 TOR_TAG=tor-0.2.7.6
 TORLAUNCHER_TAG=0.2.7.8
 TORBUTTON_TAG=1.9.4.3
