@@ -10,14 +10,15 @@ build_targets:
     osx64: Darwin_x86_64-gcc3
 channels:
     alpha: 5.5a6
-    release: 5.5
+    release: 5.5.1
 versions:
-    5.5:
+    5.5.1:
         platformVersion: 38.6.0
-        detailsURL: https://blog.torproject.org/blog/tor-browser-55-released
-        download_url: https://www.torproject.org/dist/torbrowser/5.5
+        detailsURL: https://blog.torproject.org/blog/tor-browser-551-released
+        download_url: https://www.torproject.org/dist/torbrowser/5.5.1
         incremental_from:
           - 5.0.7
+          - 5.5
         migrate_archs:
           osx32: osx64
         osx32:
